feat: Update contact page with improved layout and styling

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@firebase/auth": "^1.8.2",
     "@firebase/firestore": "^4.7.6",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "@tanstack/react-query": "^5.65.1",
+    "@types/nodemailer": "^6.4.17",
     "axios": "^1.7.9",
     "firebase": "^11.2.0",
+    "lucide-react": "^0.474.0",
     "next": "15.1.6",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
