--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -16,13 +16,14 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "@stripe/stripe-js": "^5.6.0",
-    "@tanstack/react-query": "^5.65.1",
+    "@tanstack/react-query": "^5.76.1",
     "@types/nodemailer": "^6.4.17",
     "axios": "^1.7.9",
     "firebase": "^11.2.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "nodemailer": "^6.10.0",
+    "openai": "^4.98.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
