--- a/package.json
+++ b/package.json
@@ -1,7 +1,47 @@
 {
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack --port 3001",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.36.3",
     "@emailjs/browser": "^4.4.1",
-    "firebase-admin": "^13.0.2"
+    "@firebase/auth": "^1.8.2",
+    "@firebase/firestore": "^4.7.6",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^3.10.0",
+    "@stripe/stripe-js": "^5.6.0",
+    "@tanstack/react-query": "^5.65.1",
+    "@types/nodemailer": "^6.4.17",
+    "axios": "^1.7.9",
+    "firebase": "^11.2.0",
+    "firebase-admin": "^13.0.2",
+    "lucide-react": "^0.474.0",
+    "next": "15.1.6",
+    "nodemailer": "^6.10.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
+    "stripe": "^17.6.0",
+    "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.6",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
