--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
     "@emailjs/browser": "^4.4.1",
     "@firebase/auth": "^1.8.2",
     "@firebase/firestore": "^4.7.6",
@@ -16,10 +17,12 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "@stripe/stripe-js": "^5.6.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.76.1",
     "@types/nodemailer": "^6.4.17",
     "axios": "^1.7.9",
     "firebase": "^11.2.0",
+    "graphql": "^16.11.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "nodemailer": "^6.10.0",
