--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.54.0",
     "@apollo/client": "^3.13.8",
     "@emailjs/browser": "^4.4.1",
     "@firebase/auth": "^1.8.2",
@@ -22,6 +23,7 @@
     "@types/nodemailer": "^6.4.17",
     "axios": "^1.7.9",
     "firebase": "^11.2.0",
+    "firebase-admin": "^13.4.0",
     "graphql": "^16.11.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
