--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,16 +17,17 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
-    "@stripe/stripe-js": "^5.6.0",
+    "@stripe/stripe-js": "^5.10.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.76.1",
     "@types/nodemailer": "^6.4.17",
     "axios": "^1.7.9",
+    "crawl4ai": "^1.0.1",
     "firebase": "^11.2.0",
     "firebase-admin": "^13.4.0",
     "graphql": "^16.11.0",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
+    "next": "^15.4.5",
     "nodemailer": "^6.10.0",
     "openai": "^4.98.0",
     "react": "^19.0.0",
@@ -34,7 +35,7 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
-    "stripe": "^17.6.0",
+    "stripe": "^17.7.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
