Add required Flask dependencies for backend
- Add flask-sqlalchemy, flask-migrate, flask-jwt-extended
- Add bcrypt and anthropic for authentication and AI features
- Keep minimal set focused on actually used packages

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,4 +2,9 @@ flask
 gunicorn
 python-dotenv
 flask-cors
-requests 
+requests
+flask-sqlalchemy
+flask-migrate
+flask-jwt-extended
+bcrypt
+anthropic 
