Update port configuration for Railway deployment - Frontend: Use dynamic PORT env var in start script - Backend: Listen on 0.0.0.0 with Railway PORT env var - Dockerfile: Updated comments for Railway compatibility

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,7 +12,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY . .
 
-# Expose port
+# Expose port (Railway will override this with the actual PORT)
 EXPOSE 5000
 
 # Run the application
